<resources>
    <string name="app_name">AdviSOS</string>
    <string name="slogan">Just when you need an advice…</string>
    <string name="edit_txt_phone_hint">Enter your mobile number</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings"><i>Settings</i></string>
    <string name="txt_view_connect_with">Connect with</string>
    <string name="btn_phone_number">Phone number</string>
    <string name="btn_email_and_password"><![CDATA[Email&Password]]></string>
    <string name="settings">Settings</string>
    <string name="textwarn">Permission Mandatory for this App</string>

    <string name="btn_social_networks">Social networks</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="google">GOOGLE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="create_new_account"><u>Create new account</u></string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_email_and_password">Enter email and password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account"><u>Already have an account</u></string>
    <string name="to_reset_a_password">To reset a password enter your email account</string>
    <string name="confirm_your_details">Confirm your details</string>
    <string name="mobile_number">Mobile number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="sms_code_msg">Enter the 6-digit code sent to you by SMS</string>
    <string name="resend_code"><u>Resend code</u></string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="create_chat_room">Please choose a name for the room</string>
    <string name="enter_room_name">Enter Room name</string>
    <string name="create_room_information">Please set the room name as you wish.
        The room name will be the display name of the current chat room.
        Make the name count.
    </string>
    <string name="close_chat_room">Close Chat</string>
    <string name="hello">Hello</string>
    <string name="confirm_room_name">Are you sure regarding the room name</string>
    <string name="empty_room_name">Room name cant be empty, please enter name</string>
    <string name="message_edit_text_toast"> Please enter a massage</string>
    <string name="chat_room_created_success"> Chat room created successfully</string>
    //Facebook
    <string name="facebook_app_id">636914536798291</string>
    <string name="fb_login_protocol_scheme">fb636914536798291</string>
    <string name="always">always</string>
    <string name="never">never</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="the_topic">Topic:</string>
    <string name="sort_by"><b><i><u>Sort by</u>:</i></b></string>
    <string name="alphabetically"><i>A-Z</i></string>
    <string name="popularity"><i>Popularity</i></string>
    <string name="user"><i>User</i></string>
    <string name="subject"><i>Subject</i></string>


</resources>
