<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/sort_by" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sort_by_popularity"
            android:orderInCategory="100"
            android:title="@string/popularity"
            android:checked="true"
            android:checkable="true"
            app:showAsAction="never" />
        <item
            android:id="@+id/sort_by_a_z"
            android:orderInCategory="100"
            android:title="@string/alphabetically"
            android:checked="false"
            android:checkable="true"
            app:showAsAction="never" />
    </group>
</menu>
