<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/sort_by" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sort_by_user_request"
            android:orderInCategory="100"
            android:title="@string/user"
            android:checked="false"
            android:checkable="true"
            app:showAsAction="never" />
        <item
            android:id="@+id/sort_by_subject_request"
            android:orderInCategory="100"
            android:title="@string/subject"
            android:checked="false"
            android:checkable="true"
            app:showAsAction="never" />
    </group>
</menu>
