<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityPasswordLogin"
    android:background="@drawable/background_with_high_transparency">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolBarStyle.Base">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_below="@+id/tool_bar_password_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/enter_email_and_password"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textColor="@color/black" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_email_login"
            android:layout_above="@+id/layout_password_login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/field_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="16dp"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:paddingTop="8dp"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password_login"
            android:layout_above="@+id/btn_next_of_password_login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/field_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="16dp"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:paddingTop="8dp"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_next_of_password_login"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@+id/layout_password_login"
            android:background="@drawable/design_btn_round_blue"
            android:src="@drawable/ic_arrow_forward_white_24dp" />

        <TextView
            android:id="@+id/link_forgot_password"
            android:layout_below="@+id/btn_next_of_password_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:background="@drawable/design_link_oval_black"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:gravity="center" />

        <TextView
            android:id="@+id/link_create_new_account"
            android:layout_below="@+id/link_forgot_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:background="@drawable/design_link_oval_black"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:gravity="center" />
    </RelativeLayout>

</RelativeLayout>