<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.ActivityPasswordSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_transparent"
    android:fitsSystemWindows="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/create_an_account"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email_sign_up"
            android:layout_above="@+id/layout_password_sign_up"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_email_of_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email_black"
                android:drawablePadding="16dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:paddingTop="8dp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password_sign_up"
            android:layout_above="@+id/layout_confirm_password"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_password_of_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock_black"
                android:drawablePadding="16dp"
                android:textSize="20sp"
                android:paddingTop="8dp"
                android:textColor="@color/black"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_confirm_password"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_centerInParent="true"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_confirm_password_of_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:drawableStart="@drawable/ic_lock_black"
                android:drawablePadding="16dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:paddingTop="8dp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/link_already_have_an_account"
            android:layout_below="@id/layout_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/already_have_an_account"
            android:background="@drawable/link_with_grey_tint"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_next_of_password_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_arrow_forward_white"
        app:elevation="0dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>