<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ActivityConnect">

    <RelativeLayout
        android:id="@+id/layout_logo_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo_with_bottom_line_app_name" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_logo_sign_upp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/txt_view_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_view_connect_with"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="40dp"
            android:textSize="34sp"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/btn_phone_connection"
            android:layout_below="@+id/txt_view_connection"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_phone_number"
            android:textSize="20sp"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:drawablePadding="20dp"
            android:backgroundTint="@color/transparent"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/btn_email_connection"
            android:layout_below="@+id/btn_phone_connection"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_email_and_password"
            android:textSize="20sp"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="20dp"
            android:backgroundTint="@color/transparent"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/btn_social_connection"
            android:layout_below="@+id/btn_email_connection"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/social_networks"
            android:textSize="20sp"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="20dp"
            android:backgroundTint="@color/transparent"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"/>
    </RelativeLayout>


</LinearLayout>