<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityUserDetails"
    android:background="@drawable/background_transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/confirm_your_details"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/img_profile_photo_of_user_details"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/layout_email_of_user_details"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="55dp"
            android:src="@drawable/img_profile_picture"
            app:civ_border_color="@color/black"
            app:civ_border_width="1dp"/>

        <LinearLayout
            android:layout_above="@+id/layout_email_of_user_details"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:baselineAligned="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_first_name_of_user_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingTop="8dp"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_last_name_of_user_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingTop="8dp"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_email_of_user_details"
            android:layout_above="@id/layout_phone_num_of_user_details"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_email_of_user_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingTop="8dp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_phone_num_of_user_details"
            android:layout_above="@+id/btn_next_of_user_details"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/picker_of_country_code_user_details"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:paddingTop="12dp"
                app:ccp_textSize="20sp"
                app:ccp_arrowSize="20sp"
                app:ccp_autoDetectCountry="true" >
            </com.hbb20.CountryCodePicker>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="9"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_phone_num_of_user_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingTop="8dp"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_next_of_user_details"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="230dp"
            android:layout_alignEnd="@+id/layout_phone_num_of_user_details"
            android:background="@drawable/btn_circl_blue_pressed_blue_transparent"
            android:src="@drawable/ic_arrow_forward_white"
            android:longClickable="true"/>
    </RelativeLayout>

</RelativeLayout>